# collada-dom

./: CMakeLists.txt  COLLADA_DOM.sln  Makefile  Makefile.linux  Makefile_PC  Makefile_WIN32  Readme.txt  Readme_for_PS3SDK.txt  Release_notes_2_3.txt  build.xml  collada14dom.pc.cmake.in  collada14dom.pc.in  collada15dom.pc.cmake.in  collada15dom.pc.in  collada_dom-config-version.cmake.in  collada_dom-config.cmake.in  colladainstall.nsi  readme.txt  readme_e.txt  readme_j.txt  relnotes_e.txt  relnotes_j.txt
doc/: COLLADA131.Doxyfile  COLLADASchema.xsd  COLLADASchema1.3.1.xsd  COLLADA_DOM.chm  COLLADA_DOM_131.chm
dom/: CMakeLists.txt  Makefile  colladainstall.nsi  readme.txt  readme_e.txt  release.py  releasenotes.txt
dom/codeGen/: cleanSchema  gen.bat  gen.php  gen_dom_1_5  readme.txt  readme_e.txt  relnotes_e.txt
dom/codeGen/1.4/om/: xsAll.php  xsAny.php  xsAttribute.php  xsComplexContent.php  xsComplexType.php  xsElement.php  xsImport.php  xsMaxLength.php  xsMinInclusive.php  xsMinLength.php  xsSequence.php  xsSimpleContent.php  xsWhiteSpace.php
dom/codeGen/1.4/src/: ElementMeta.php  SchemaParser.php
dom/codeGen/1.4/tpl/: template-engine.php  tpl-class-def.php  tpl-constants-cpp.php  tpl-cpp-methods.php  tpl-cpp-static.php  tpl-cpp.php  tpl-doxygen.php  tpl-types-cpp-file.php  tpl-types-header.php
dom/codeGen/1.5/om/: base-types.php  object-model.php  xsAnnotation.php  xsAppinfo.php  xsChoice.php  xsDocumentation.php  xsList.php  xsMaxInclusive.php  xsMinExclusive.php  xsPattern.php  xsRestriction.php  xsSimpleType.php
dom/codeGen/1.5/tpl/: template-engine.php  tpl-class-def.php  tpl-constants-cpp-file.php  tpl-constants-file.php  tpl-constants.php  tpl-cpp-methods.php  tpl-elements.php  tpl-header.php  tpl-includes.php  tpl-types-cpp.php  tpl-types-header-file.php  tpl-types-header.php
dom/codeGen/om/: xsEnumeration.php  xsExtension.php  xsGroup.php  xsMaxExclusive.php  xsSchema.php  xsUnion.php
dom/codeGen/src/: TypeMeta.php
dom/codeGen/tpl/: tpl-cpp-body.php  tpl-dot-h.php  tpl-elements-file.php  tpl-include-list.php  tpl-includes.php
dom/doc/: readme_e.txt
dom/external-libs/: readme.txt
dom/external-libs/boost/lib/vc7.1/: libboost_filesystem.lib
dom/external-libs/boost/lib/vc8/: libboost_filesystem-d.lib  libboost_filesystem.lib  libboost_system-d.lib  libboost_system.lib
dom/external-libs/libxml2/win32/include/libxml/: xmlversion.h
dom/external-libs/libxml2/win32/lib/: libxml2.lib  libxml2_a.lib
dom/external-libs/minizip/win32/lib/: minizip.lib
dom/external-libs/pcre/: config.h  pcre_stringpiece.h  pcrecpparg.h
dom/external-libs/pcre/lib/vc7.1/: pcre.lib  pcrecpp.lib
dom/external-libs/pcre/lib/vc8/: pcre-d.lib  pcre.lib  pcrecpp-d.lib  pcrecpp.lib
dom/external-libs/pcre/lib/x64/: pcre.lib  pcrecpp.lib
dom/external-libs/tinyxml/lib/vc8/: tinyxml.lib
dom/external-libs/tinyxml/lib/vc9/: tinyxml.lib
dom/include/: dae.h
dom/include/1.5/dom/: domFx_sampler1D.h  domFx_sampler2D.h  domFx_sampler3D.h  domFx_samplerCUBE.h  domFx_samplerDEPTH.h  domFx_samplerRECT.h  domInstance_camera.h  domInstance_force_field.h  domInstance_image.h  domInstance_joint.h  domInstance_light.h  domInstance_physics_material.h  domRotate.h  domScale.h  domTranslate.h
dom/include/dae/: daeArray.h  daeAtomicType.h  daeDatabase.h  daeDocument.h  daeElement.h  daeError.h  daeIDRef.h  daeIOPlugin.h  daeIOPluginCommon.h  daeMemorySystem.h  daeMetaAttribute.h  daeRawResolver.h  daeSIDResolver.h  daeStandardURIResolver.h  daeTinyXMLPlugin.h  daeURI.h  daeUtils.h  daeWin32Platform.h
dom/include/modules/: daeLIBXMLPlugin.h  daeSTLDatabase.h
dom/make/: common.mk  dom.mk  domTest.mk  minizip.mk  readme  rules.mk
dom/projects/: changeColladaVersion.py  vc8to9.py
dom/projects/vc10-1.4/: dom-static.vcxproj  dom.vcxproj  domTest.vcxproj
dom/projects/vc10-1.5/: dom-static.vcxproj  dom.sln  dom.vcxproj  domTest.vcxproj
dom/projects/vc10-PS3/: dom.sln  dom.vcxproj
dom/projects/vc8/: build.bat  dom-static.vcproj  dom.sln  dom.vcproj  domTest.vcproj
dom/projects/vc8-1.4/: dom-static.vcproj  dom.vcproj  domTest.vcproj
dom/projects/vc8-1.5/: dom-static.vcproj  dom.vcproj  domTest.vcproj
dom/projects/vc8-PS3/: dom.sln  dom.vcproj
dom/projects/vc9/: dom-static.vcproj  dom.sln  dom.vcproj  domTest.vcproj
dom/projects/vc9-1.4/: dom-static.vcproj  dom.sln  dom.vcproj  domTest.vcproj  readme.txt
dom/projects/vc9-1.5/: dom-static.vcproj  dom.sln  dom.vcproj  domTest.vcproj
dom/projects/vc9-PS3/: dom.sln  dom.vcproj
dom/projects/xcode-1.4/dom.xcodeproj/: project.pbxproj
dom/projects/xcode/dom.xcodeproj/: hlaw.mode1v3  hlaw.pbxuser  project.pbxproj
dom/release/: release.py  runDomTest
dom/samples/export/: sampleExport.cpp  sampleExport_VC8.sln  sampleExport_VC8.vcproj
dom/src/1.4/: CMakeLists.txt
dom/src/1.5/: CMakeLists.txt
dom/src/1.5/dom/: domFx_sampler1D.cpp  domFx_sampler2D.cpp  domFx_sampler3D.cpp  domFx_samplerCUBE.cpp  domFx_samplerDEPTH.cpp  domFx_samplerRECT.cpp  domInstance_camera.cpp  domInstance_force_field.cpp  domInstance_image.cpp  domInstance_joint.cpp  domInstance_light.cpp  domInstance_physics_material.cpp  domRotate.cpp  domScale.cpp  domTranslate.cpp
dom/src/dae/: dae.cpp  daeAtomicType.cpp  daeDocument.cpp  daeElement.cpp  daeIDRef.cpp  daeIOPluginCommon.cpp  daeMetaAttribute.cpp  daeMetaChoice.cpp  daeMetaElement.cpp  daeMetaElementAttribute.cpp  daeRawResolver.cpp  daeSIDResolver.cpp  daeStandardURIResolver.cpp  daeStringTable.cpp  daeTinyXMLPlugin.cpp  daeURI.cpp  daeUtils.cpp  daeZAEUncompressHandler.cpp
dom/src/modules/LIBXMLPlugin/: daeLIBXMLPlugin.cpp
dom/src/modules/STLDatabase/: daeSTLDatabase.cpp
dom/test/: domTest.cpp  domTest.h  export.cpp  integrationExample.cpp
dom/test/1.4/: domTest.cpp
dom/test/1.5/: domTest.cpp
dom/test/1.5/data/: clipPlane.dae  duck.dae
dom/test/data/: Seymour.dae  Seymour_roundTrip.dae  badFile.dae  badSkew.dae  clipPlane.dae  crankarm.dae  externalRef.dae  extraTest.dae  quotesProblem.dae  sidResolveTest.dae  uri.dae
external-libs/: readme_e.txt  readme_j.txt
(+1537 files in other folders)
